# motogesi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Pipfile  README.md  check_mikro.sh  erase.sh  flash.sh  main.rs  main2  requirements.txt
.cargo/: config.toml
.github/workflows/: docker-publish.yml
core/: settings.py  urls.py
dashboard/: urls.py  views.py
src/: main.rs
