[package]
name = "motogesi"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "^0.7.6"      # Access to the generic ARM peripherals
cortex-m-rt = "^0.7.1"  # Startup code for the ARM Core
embedded-hal = "^0.2.7"  # Access to generic embedded functions (`set_high`)
panic-halt = "^0.2.0"    # Panic handler
dht11 = "0.3.1" # https://crates.io/crates/dht11
nb = "1.0.0"
unwrap-infallible = "0.1.5"
heapless = "0.8.0"
rtt-target = "0.6.1"
panic-rtt-target = "0.2.0"

# Access to the stm32f103 HAL.
[dependencies.stm32f1xx-hal]
# Bluepill contains a 64kB flash variant which is called "medium density"
features = ["stm32f103", "rt", "medium"]
version = "^0.10.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://jonathanklimt.de/electronics/programming/embedded-rust/rust-on-stm32-2/

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[build]
target = "thumbv7m-none-eabi"
lto = true  # Optymalizacja kodu
opt-level = "s" # Zmniejszenie rozmiaru kodu
codegen-units = 1
